EPMRPP-38150: All Users. Table. Fix user name alignment

--- a/app/src/pages/admin/allUsersPage/allUsersGrid/nameColumn/nameColumn.scss
+++ b/app/src/pages/admin/allUsersPage/allUsersGrid/nameColumn/nameColumn.scss
@@ -1,7 +1,8 @@
 .name-col {
+  display: flex;
+  align-items: center;
   width: 25%;
   height: 70px;
-  vertical-align: middle;
   font-size: 13px;
   font-family: $FONT-SEMIBOLD;
   &:hover {
@@ -16,11 +17,8 @@
   @media (max-width: $SCREEN_SM_MAX) {
     width: 100%;
     height: 20px;
-    margin-bottom: 5px;
+    margin-top: 15px;
   }
-}
-.name {
-  vertical-align: top;
 }
 .label {
   display: inline-block;
@@ -33,10 +31,7 @@
   font-size: 10px;
   text-align: center;
   line-height: 15px;
-  overflow: hidden;
-  text-overflow: ellipsis;
   text-transform: lowercase;
-  vertical-align: top;
 }
 .you-label {
   background-color: $COLOR--dark-pastel-green;
@@ -47,15 +42,12 @@
 .make-admin-label {
   background-color: $COLOR--gray-60;
   opacity: 0;
+  white-space: nowrap;
 }
 .avatar-wrapper {
-  display:inline-block;
-  width: 40px;
-  height: 40px;
   margin-right: 10px;
 }
 .avatar {
-  display: inline-block;
   width: 40px;
   height: 40px;
 }
